--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
+
+.swiper-slide img {
+    max-width: 100%;
+    transition: all .3s ease;
+    cursor: pointer;
+}
+
+.swiper-slide img:hover {
+    transform: scale(1.15);
+}
+
+* {
+    font-family: 'Source Sans Pro', sans-serif;
+}
