--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 
 .swiper-slide img {
     max-width: 100%;
-    transition: all .3s ease;
+    transition: transform .3s ease;
     cursor: pointer;
 }
 
